Update hardcoded colors in DeviceInfoManager

--- a/app/src/main/res/layout/activity_device_info_manager.xml
+++ b/app/src/main/res/layout/activity_device_info_manager.xml
@@ -14,9 +14,10 @@
         android:layout_height="wrap_content"
         android:background="@color/tabandbar"
         android:minHeight="?attr/actionBarSize"
-        android:textColor="#FFFFFF"
-        app:tabIndicatorColor="#FFFFFF"
-        app:tabSelectedTextColor="#FFFFFF"
+        android:textColor="@color/white"
+        app:tabIndicatorColor="@color/white"
+        app:tabSelectedTextColor="@color/white"
+        app:tabTextColor="@color/text_secondary"
         app:tabMode="scrollable"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
